[package]
name = "libyaml-safer"
version = "0.1.0"
authors = [
    "Simon Ask Ulsnes <simon@ulsnes.dk",
    "David Tolnay <dtolnay@gmail.com>",
]
categories = [
    "encoding",
    "parser-implementations",
    "no-std",
]
description = "Safer libyaml port, based on unsafe-libyaml"
documentation = "https://docs.rs/libyaml-safer"
edition = "2021"
keywords = ["yaml"]
license = "Apache 2.0 OR MIT"
repository = "https://github.com/simonask/libyaml-safer"
rust-version = "1.70"

[workspace]
[dev-dependencies]
pretty_assertions = "1.0"
unsafe-libyaml-test-suite = { path = "tests/data" }

[lib]
doc-scrape-examples = false

[dependencies]
thiserror = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
