[package]
name = "libyaml-safer"
version = "0.1.0"
authors = ["Simon Ask Ulsnes <simon@ulsnes.dk"]
categories = ["encoding", "parser-implementations"]
description = "Safer libyaml port, based on unsafe-libyaml"
documentation = "https://docs.rs/libyaml-safer"
edition = "2021"
keywords = ["yaml"]
license-file = "LICENSE-MIT"
repository = "https://github.com/simonask/libyaml-safer"
rust-version = "1.70"

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.0"
unsafe-libyaml = "0.2.10"
unsafe-libyaml-test-suite = { path = "tests/data" }

[lib]
doc-scrape-examples = false

[dependencies]
thiserror = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[[bench]]
name = "bench"
harness = false
